# webxash-metamod

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: _build-binaries.yml  ci.yml
src/: lib.rs  plugin.rs
src/bridge/: mod.rs
src/config/: mod.rs
src/metamod/: exports.rs  mod.rs  types.rs
src/runtime/: mod.rs
src/server/: http.rs  mod.rs  websocket.rs
src/webrtc/: mod.rs  signaling.rs
