[package]
name = "webxash3d-metamod"
version = "0.1.0"
edition = "2021"
description = "WebRTC bridge Metamod plugin for Half-Life/CS 1.6"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "webxash3d_metamod"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "net", "sync", "time", "macros"] }

# WebRTC - pure Rust implementation
webrtc = "0.11"

# HTTP/WebSocket server
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
futures = "0.3"
bytes = "1"
tracing = "0.1"
parking_lot = "0.12"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
# Don't use panic = "abort" in shared libraries - it would kill HLDS
panic = "unwind"
opt-level = "z"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
